Resources/k8s/kustomize/other/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: pokeapi
  labels:
    name: pokeapi
