Resources/k8s/kustomize/other/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokeapi-ingress
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    ingress.kubernetes.io/config-backend: |
        compression algo gzip
        compression type application/json
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /api/v2
        pathType: Prefix
        backend:
          service:
            name: pokeapi
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-ingress
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    ingress.kubernetes.io/config-backend: |
      http-request replace-path /graphql(.*) \1
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: graphql
            port:
              number: 8080
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: auth-ingress
#   annotations:
#     ingress.kubernetes.io/auth-type: basic
#     ingress.kubernetes.io/auth-realm: Default realm
#     ingress.kubernetes.io/auth-secret: bugs-frontend-secret
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /bugs
#         backend:
#           serviceName: frontend-bugs
#           servicePort: 8080
